--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ div {
 
   background-color: limegreen;
   opacity: 0;
+  transition: all .5s linear;
 }
 
 .diamond {
@@ -45,6 +46,7 @@ div {
 
   background-color: hotpink;
   transform: rotate(45deg);
+  transition: all .5s linear;
 }
 
 .panel {
@@ -58,6 +60,7 @@ div {
 
   color: darkgoldenrod;
   text-align: center;
+  transition: all .5s linear;
 }
 
 .panel h2 {
@@ -98,4 +101,53 @@ div {
   overflow: hidden;
 
   color: mediumpurple;
+  animation: slide .5s forwards ease;
+}
+
+@keyframes slide {
+
+  0%{
+    max-height: 0;
+  }
+
+  100% {
+    max-height: 1rem;
+  }
+}
+
+.is-clicked {
+  opacity: 1;
+}
+
+.is-clicked2{
+  right: 50px;
+}
+
+.is-clicked3 {
+  max-height: 0;
+}
+
+.is-clicked4 {
+  animation: bounce 1s both;
+}
+
+@keyframes bounce {
+
+  0%{
+    right: -100px;
+    top: 10px;
+  }
+
+  25%{
+    top: 40px;
+  }
+
+  50%{
+    top: 20px;
+  }
+
+  100%{
+    right: 100px;
+    top: 20px;
+  }
 }
